Several dependency updates, small scrolling fix.